# Wg21Activity

./: .gitignore  .gitmodules  3way.hpp  CMakeLists.txt  Dockerfile  README.txt  docker_dev_env  docker_dev_env.cpp
P2022/: P2022R0.md  P2022R3.md  description.txt
P2022/example/: CMakeLists.txt  example1.cpp  test_std_compare_func.cpp
P2022/paper/: Makefile
P2022/resources/: bari_stackoverflow  wiki_weak_ordering
P2022/tests/: CMakeLists.txt
P2022/tests/header/: .header.hpp.swp  3way.hpp  header.hpp
P2022/tests/units/: CMakeLists.txt  avi_tests.cpp  containers.cpp  t1.cpp  unordered.cpp
P2832/tests/: CMakeLists.txt
P2832/tests/header/: P2832.hpp  convertible_and_same_as.hpp
P2832/tests/units/: basic_check.cpp
tests/: compilation_error.cpp  containers.cpp  general_tests.cpp  ranges.cpp  t1.cpp  unordered.cpp
